--- a/ScreamControl_WPF/App.xaml
+++ b/ScreamControl_WPF/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="ScreamControl_WPF.App"
+﻿<Application x:Class="ScreamControl_Client.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:properties="clr-namespace:ScreamControl_WPF.Properties"
+             xmlns:properties="clr-namespace:ScreamControl_Client.Properties"
              StartupUri="MainWindow.xaml" LoadCompleted="Application_LoadCompleted" Startup="Application_Startup">
     <Application.Resources>
         <ResourceDictionary>
