--- a/ScreamControl_WPF/Language/lang.en-US.xaml
+++ b/ScreamControl_WPF/Language/lang.en-US.xaml
@@ -1,12 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:v="clr-namespace:System;assembly=mscorlib">
-    <v:String x:Key="m_Language">Language</v:String>
-    <v:String x:Key="m_Boost">Mic Boost</v:String>
-    <v:String x:Key="m_Volume">Alarm volume</v:String>
-    <v:String x:Key="m_Delay">Safe scream zone duration (sec)</v:String>
-    <v:String x:Key="m_DelayElapsedFinish">Play!</v:String>
-    <v:String x:Key="m_AlertWindowLabel">Alert window delay (sec)</v:String>
     <v:String x:Key="m_AlertWindow">Too loud</v:String>
     <v:String x:Key="m_AlertWindowElapsedFinish">Start!</v:String>
+    <v:String x:Key="m_AlertWindowLabel">Alert window delay (sec)</v:String>
+    <v:String x:Key="m_AppSwitch">Activate alerts</v:String>
+    <v:String x:Key="m_Boost">Mic Boost</v:String>
+    <v:String x:Key="m_Delay">Safe scream zone duration (sec)</v:String>
+    <v:String x:Key="m_DelayElapsedFinish">Play!</v:String>
+    <v:String x:Key="m_Language">Language</v:String>
+    <v:String x:Key="m_Off">Off</v:String>
+    <v:String x:Key="m_On">On</v:String>
+    <v:String x:Key="m_Stealth">Activate stealth mode</v:String>
+    <v:String x:Key="m_Volume">Alarm volume</v:String>
 </ResourceDictionary>
