--- a/ScreamControl_WPF/Language/lang.ru-RU.xaml
+++ b/ScreamControl_WPF/Language/lang.ru-RU.xaml
@@ -1,12 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:v="clr-namespace:System;assembly=mscorlib">
-    <v:String x:Key="m_Language">Язык</v:String>
-    <v:String x:Key="m_Boost">Усиление микрофона</v:String>
-    <v:String x:Key="m_Volume">Громкость</v:String>
-    <v:String x:Key="m_Delay">Время до включения алерта (сек)</v:String>
-    <v:String x:Key="m_DelayElapsedFinish">Старт!</v:String>
-    <v:String x:Key="m_AlertWindowLabel">Время до появления окна с алертом (сек)</v:String>
     <v:String x:Key="m_AlertWindow">Слишком громко</v:String>
     <v:String x:Key="m_AlertWindowElapsedFinish">Старт!</v:String>
+    <v:String x:Key="m_AlertWindowLabel">Время до появления окна с алертом (сек)</v:String>
+    <v:String x:Key="m_AppSwitch">Включить алерты</v:String>
+    <v:String x:Key="m_Boost">Усиление микрофона</v:String>
+    <v:String x:Key="m_Delay">Время до включения алерта (сек)</v:String>
+    <v:String x:Key="m_DelayElapsedFinish">Старт!</v:String>
+    <v:String x:Key="m_Language">Язык</v:String>
+    <v:String x:Key="m_Off">Выкл</v:String>
+    <v:String x:Key="m_On">Вкл</v:String>
+    <v:String x:Key="m_Stealth">Включить скрытный режим</v:String>
+    <v:String x:Key="m_Volume">Громкость</v:String>
 </ResourceDictionary>
