--- a/ScreamControl_WPF/Language/lang.en-US.xaml
+++ b/ScreamControl_WPF/Language/lang.en-US.xaml
@@ -13,4 +13,5 @@
     <v:String x:Key="m_On">On</v:String>
     <v:String x:Key="m_Stealth">Activate stealth mode</v:String>
     <v:String x:Key="m_Volume">Alarm volume</v:String>
+    <v:String x:Key="m_VolumeSystem">System volume</v:String>
 </ResourceDictionary>
