--- a/ScreamControl_WPF/MainWindow.xaml
+++ b/ScreamControl_WPF/MainWindow.xaml
@@ -1,11 +1,12 @@
 ﻿<Controls:MetroWindow
+    BorderBrush="{DynamicResource AccentColorBrush}"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:res="Resources.xml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:Properties="clr-namespace:ScreamControl_Client.Properties"
         xmlns:System="clr-namespace:System;assembly=mscorlib" x:Name="wMain" x:Class="ScreamControl_Client.MainWindow"
-        Title="Scream Control" Loaded="Window_Loaded" Closing="Window_Closing" MouseMove="wMain_MouseMove" MouseUp="wMain_MouseUp" Deactivated="wMain_Deactivated" Closed="wMain_Closed" SizeToContent="Height" Width="452" StateChanged="wMain_StateChanged" ShowMaxRestoreButton="False" BorderThickness="3">
+        Title="Scream Control" Loaded="Window_Loaded" Closing="Window_Closing" MouseMove="wMain_MouseMove" MouseUp="wMain_MouseUp" Deactivated="wMain_Deactivated" Closed="wMain_Closed" SizeToContent="Height" Width="452" StateChanged="wMain_StateChanged" ShowMaxRestoreButton="False" BorderThickness="1">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -39,6 +40,12 @@
                 <WrapPanel>
                     <Slider x:Name="sliderVolume" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Top" Width="126" Foreground="#FFD4D4D4" BorderBrush="#00000000" Background="{x:Null}" Height="16" Value="{Binding Source={x:Static Properties:Settings.Default}, Path=Volume, Mode=TwoWay}" ValueChanged="sliderVolume_ValueChanged" Grid.Row="1"/>
                     <Label Content="{Binding Value, ElementName=sliderVolume, Mode=OneWay}" ContentStringFormat="{}{0:0}" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.421,0.231" Padding="0" Grid.Row="1" Height="16" Width="19"/>
+                </WrapPanel>
+                
+                <Label Content="{DynamicResource m_VolumeSystem}" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" Height="26" Padding="0,5,5,5" Grid.Row="1"/>
+                <WrapPanel>
+                    <Slider x:Name="sliderVolumeSystem" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Top" Width="126" Foreground="#FFD4D4D4" BorderBrush="#00000000" Background="{x:Null}" Height="16" Value="{Binding Source={x:Static Properties:Settings.Default}, Path=VolumeSystem, Mode=TwoWay}" ValueChanged="sliderVolumeSystem_ValueChanged" Grid.Row="1"/>
+                    <Label Content="{Binding Value, ElementName=sliderVolumeSystem, Mode=OneWay}" ContentStringFormat="{}{0:0}" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.421,0.231" Padding="0" Grid.Row="1" Height="16" Width="19"/>
                 </WrapPanel>
 
                 <Label Content="{DynamicResource m_Delay}" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Height="26" Padding="0,5,5,5" Grid.Row="1" Width="173"/>
