--- a/ScreamControl_WPF/Language/lang.en-US.xaml
+++ b/ScreamControl_WPF/Language/lang.en-US.xaml
@@ -4,15 +4,21 @@
     <v:String x:Key="m_AlertWindow">Too loud</v:String>
     <v:String x:Key="m_AlertWindowElapsedFinish">START!</v:String>
     <v:String x:Key="m_AlertWindowLabel">Alert window delay (sec)</v:String>
-    <v:String x:Key="m_SoundAlertExpander">Sound Alert</v:String>
-    <v:String x:Key="m_MessageAlertExpander">Message Alert</v:String>
     <v:String x:Key="m_Boost">Mic Boost</v:String>
+    <v:String x:Key="m_ControllerBlock">Sorry kid, someone control your sound. Please wait.</v:String>
     <v:String x:Key="m_Delay">Delay before alarm (sec)</v:String>
     <v:String x:Key="m_DelayElapsedFinish">PLAY!</v:String>
     <v:String x:Key="m_Language">Language</v:String>
+    <v:String x:Key="m_MessageAlertExpander">Message Alert</v:String>
     <v:String x:Key="m_Off">Off</v:String>
     <v:String x:Key="m_On">On</v:String>
+    <v:String x:Key="m_SoundAlertExpander">Sound Alert</v:String>
     <v:String x:Key="m_Stealth">Activate stealth mode</v:String>
     <v:String x:Key="m_Volume">Alarm volume</v:String>
     <v:String x:Key="m_VolumeSystem">System volume</v:String>
+    <!-- Connection info strings -->
+    <v:String x:Key="mc_Initializing">Service init...</v:String>
+    <v:String x:Key="mc_Ready">Service ready, waiting for controller...</v:String>
+    <v:String x:Key="mc_Connected">Controller connected, data transfer in process.</v:String>
+    <v:String x:Key="mc_Disconnected">Controller disconnected</v:String>
 </ResourceDictionary>
